# GABDICE

./: .env  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package-lock.json  run.bat  save_db_data.bat
GABRAZOR/: GABRAZOR.slnx
GABRAZOR/GABRAZOR/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
GABRAZOR/GABRAZOR/Pages/Shared/: _Layout.cshtml
GABRAZOR/GABRAZOR/Properties/: launchSettings.json
config/: app.php  database.php
database/: db_dump.sql
resources/views/: welcome.blade.php
src/: dice.cpp  dice.h  main.cpp  physics.cpp  physics.h
